--- a/src/data/post/SSIB-2025-highlights.mdx
+++ b/src/data/post/SSIB-2025-highlights.mdx
@@ -16,6 +16,8 @@ tags:
 
 import Logo from '~/components/Logo.astro';
 import { YouTube, Tweet, Vimeo } from 'astro-embed';
+import socialPhoto from '~/assets/images/posts/SSIB/SSIB-2025-Cover.png';
+import heroPhoto from '~/assets/images/posts/SSIB/SSIB-2025-4.png';
 
 The [Society for the Study of Ingestive Behavior (SSIB)](https://www.ssib.org/2025/index.php) successfully concluded its 32nd Annual Meeting, held from July 28th to August 1st at the Mathematical Institute in Oxford, United Kingdom. This year’s meeting featured a remarkable lineup of talks and presentations, addressing cutting-edge research topics including the genetics of thinness, eating behavior in children, food insecurity and the microbiome, social influences on eating, and the physiological underpinnings of life’s great pleasures: eating.
 
@@ -26,4 +28,21 @@ The OBRAIN Lab was proudly represented at the meeting with a poster presentation
 Additionally, Arsene Kanyamibwa delivered an engaging 12-minute presentation on [“Ultraprocessed food consumption affects structural integrity of feeding-related brain regions independent of and via adiposity,”](https://www.ssib.org/2025/program.php?page=program&displayday=4&pads=&start_range=&start_interval=&changing_days=yes&hide_details=) sparking thoughtful discussions among attendees.
 
 
-![Super wide](~/assets/images/posts/SSIB/SSIB-2025-1.png)
+![Arsene Kanyamibwa Presenting](~/assets/images/posts/SSIB/SSIB-2025-1.png)
+
+The meeting culminated in a memorable banquet held at the Museum of Natural History in Oxford, where several awards were presented, celebrating outstanding contributions to the field. The evening provided a perfect opportunity for networking and reflection on the inspiring advancements shared throughout the conference.
+
+![evening and networking](~/assets/images/posts/SSIB/SSIB-2025-2.png)
+
+The OBRAIN Lab extends its gratitude to all participants for making the 2025 Annual Meeting a resounding success for our Attendee (Arsene). We look forward to continuing our exploration of ingestive behavior and fostering collaboration within this vibrant scientific community.
+
+
+<figure>
+  <img src={socialPhoto.src} alt="Social" />
+  <figcaption style="font-size: 14px; font-style: italic;">Zach, Filip , Golnaz , Elizabeth, Arashdeep , Justin, Arsene , Jessica (left to right).</figcaption>
+</figure>
+
+<figure>
+  <img src={heroPhoto.src} alt="Social" />
+  <figcaption style="font-size: 14px; font-style: italic;">Arsene, Filip, Arashdeep, Daniel (left to right).</figcaption>
+</figure>
